objects/ssot__CampaignMember__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessAccountId__c</fullName>
        <label>Business Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignMemberStatus__c</fullName>
        <label>Campaign Member Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointEmailId__c</fullName>
        <label>Contact Point Email</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointPhoneId__c</fullName>
        <label>Contact Point Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstResponseDateTime__c</fullName>
        <label>First Response DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Campaign Member Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualSourceId__c</fullName>
        <label>Individual Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualSourceObject__c</fullName>
        <label>Individual Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708254974873_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CampaignMember_ContactPointPhoneId_m_rel</label>
        <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
        <relationshipLabel>CampaignMember_ContactPointPhoneId_m_rel</relationshipLabel>
        <relationshipName>rel_1708254974873_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708254976791_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CampaignMember_CampaignId_map_Campai_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>CampaignMember_CampaignId_map_Campai_rel</relationshipLabel>
        <relationshipName>rel_1708254976791_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708254984589_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CampaignMember_IndividualSourceId_ma_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>CampaignMember_IndividualSourceId_ma_rel</relationshipLabel>
        <relationshipName>rel_1708254984589_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>